# rudis

./: .gitignore  Cargo.toml  readme.md
examples/: hello-redis.rs
src/: command.rs  connection.rs  lib.rs  main.rs  server.rs
src/client/: client.rs
src/command/: get.rs  mod.rs  set.rs
tests/: command.rs
