[package]
name = "rudis-http"
description = "A minial HTTP Redis server"
version = "0.1.2"
edition = "2021"
authors = ["Lorenzo Cao <lorenzocao25@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lorenzoc25/rudis"
license = "MIT"
keywords = ["redis", "http", "server"]
categories = ["database", "network-programming", "http", "server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
bytes = "1"
httparse = "1"
crossbeam-utils = "0.8"
clap = { version = "4.2.7", features = ["derive"] }
monoio = "0.1.3"
